@@ -4,6 +4,7 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.Customizer;
@@ -18,8 +19,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+
 @Configuration
 public class SecurityConfig {
+
+  @Value("${cors.allowed-origins}")
+  private String corsAllowedOrigins;
 
   @Bean
   SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -37,7 +43,14 @@ public class SecurityConfig {
         ).permitAll()
         .anyRequest().authenticated()
       )
-      .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(keycloakJwtConverter())));
+      .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(keycloakJwtConverter())))
+      .headers(headers -> headers
+          .frameOptions(frame -> frame.deny())
+          .contentTypeOptions(Customizer.withDefaults())
+          .httpStrictTransportSecurity(hsts -> hsts
+              .includeSubDomains(true)
+              .maxAgeInSeconds(31536000))
+      );
     return http.build();
   }
 
@@ -56,15 +69,16 @@ public class SecurityConfig {
     });
     return converter;
   }
+
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(List.of(
-      "http://localhost:5173",
-      "http://localhost:3000"
-    ));
+    config.setAllowedOrigins(Arrays.asList(corsAllowedOrigins.split(",\\s*")));
     config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(List.of("*"));
+    config.setAllowedHeaders(List.of(
+        "Authorization", "Content-Type", "Accept",
+        "Origin", "X-Requested-With", "Cache-Control"
+    ));
     config.setAllowCredentials(true);
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", config);
